# ROS-Turtlebot-Navigation

./: .gitignore  Homework2_Answers.md  README.md  SLAM_RESULTS.md  nuturtle.rosinstall
bmapping/: CMakeLists.txt  README.md  ReadMe.md  package.xml
bmapping/config/: LDS_01_lidar.yaml  bmapping.rviz
bmapping/include/bmapping/: cloud_alignment.hpp  grid_mapper.hpp  particle_filter.hpp  sensor_model.hpp
bmapping/launch/: slam.launch
bmapping/src/: turtle_mapping_node.cpp
bmapping/src/bmapping/: cloud_alignment.cpp  grid_mapper.cpp  particle_filter.cpp  sensor_model.cpp
controller/: CMakeLists.txt  README.md  package.xml
controller/config/: mppi_params.yaml  mppi_waypoints.rviz
controller/include/controller/: mppi.hpp  rk4.hpp
controller/launch/: mppi_control.launch
controller/src/: mppi_node.cpp  mppi_waypoints_node.cpp
controller/src/controller/: mppi.cpp  rk4.cpp
navigation/: CMakeLists.txt  package.xml
navigation/include/navigation/: road_map.hpp
navigation/src/: draw_path_node.cpp
navigation/src/navigation/: road_map.cpp
nuslam/: CMakeLists.txt  README.md  package.xml
nuslam/config/: block_world_landmarks.yaml
nuslam/include/nuslam/: ekf_filter.hpp  filter.hpp  landmarks.hpp
nuslam/launch/: landmarks.launch  slam.launch
nuslam/msg/: TurtleMap.msg
nuslam/src/: analysis_node.cpp  draw_map_node.cpp  landmarks_node.cpp  slam_node.cpp
nuslam/src/nuslam/: ekf_filter.cpp  filter.cpp  landmarks.cpp
nuslam/test/: test_landmarks.cpp
nuturtle_description/: CMakeLists.txt  README.md  package.xml
nuturtle_description/config/: diff_drive.rviz  diff_params.yaml
nuturtle_description/launch/: view_diff_drive.launch
nuturtle_description/urdf/: diff_drive.urdf.xacro
nuturtle_gazebo/: CMakeLists.txt  package.xml
nuturtle_gazebo/launch/: diff_drive_gazebo.launch  gazebo_waypoints.launch
nuturtle_gazebo/src/: turtle_drive_plugin.cpp
nuturtle_gazebo/urdf/: diff_drive.gazebo.xacro
nuturtle_robot/: CMakeLists.txt  package.xml
nuturtle_robot/config/: real_waypoints.yaml
nuturtle_robot/launch/: basic_remote.launch  follow_waypoints.launch  mppi_waypoints.launch  test_movement.launch
nuturtle_robot/src/: mppi_waypoints_node.cpp  real_waypoint_node.cpp  rotation_node.cpp  turtle_interface_node.cpp
nuturtle_robot/srv/: start.srv
nuturtle_robot/test/: turtle_interface_test_node.cpp
nuturtle_robot/tests/: turtle_interface.test
planner/: CMakeLists.txt  README.md  package.xml
planner/config/: grid_planner.rviz  map_boundaries.yaml  potential_field.rviz  prm.rviz
planner/include/planner/: dstar_light.hpp  grid_map.hpp  lpa_star.hpp  planner_utilities.hpp  potential_field.hpp  prm_planner.hpp  road_map.hpp
planner/launch/: plan.launch
planner/src/: draw_cont_map_node.cpp  grid_planner_node.cpp  potential_field_planner_node.cpp  prm_planner_node.cpp
planner/src/planner/: dstar_light.cpp  grid_map.cpp  lpa_star.cpp  planner_utilities.cpp  potential_field.cpp  prm_planner.cpp  road_map.cpp
rigid2d/: C002_answers.md  CMakeLists.txt  main.cpp  package.xml  rigid2d.cpp  rigid2d.hpp  rigid2d_test  test1_answer.txt  test1_input.txt  test_compile.bash
rigid2d/config/: odometer_params.yaml
rigid2d/include/rigid2d/: diff_drive.hpp  rigid2d.hpp  utilities.hpp  waypoints.hpp
rigid2d/src/: fake_diff_encoders_name.cpp  fake_diff_encoders_node.cpp  odometry_node.cpp  rigid2d_node.cpp
rigid2d/src/rigid2d/: diff_drive.cpp  rigid2d.cpp  utilities.cpp  waypoints.cpp
rigid2d/srv/: set_pose.srv
rigid2d/test/: rigid2d_test_launch.test  test_diff_drive.cpp  test_rigid2d.cpp
tsim/: CMakeLists.txt  README.md  package.xml
tsim/config/: diff_drive_odom.rviz  turtle_params.yaml  waypoints.yaml
tsim/launch/: trect.launch  turtle_odom.launch  turtle_pent.launch
tsim/msg/: PoseError.msg
tsim/src/: tsim_node.cpp  turtle_way_node.cpp
