<?xml version="1.0"?>
<package format="2">
  <name>navigation</name>
  <version>0.0.1</version>
  <description>Global and local planning and control</description>

  <maintainer email="bostoncleek2020@u.northwestern.edu">bostoncleek</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rigid2d</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
