<?xml version="1.0"?>
<package format="2">
  <name>nuslam</name>
  <version>0.0.1</version>
  <description>EKK slam</description>
  <maintainer email="bostoncleek2020@u.northwestern.edu">bostoncleek</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- <build_depend>message_runtime</build_depend> -->
  <build_depend>std_msgs</build_depend>
  <build_depend>rigid2d</build_depend>
  <build_depend>tsim</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>tf2</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>tf2</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>rosunit</test_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
