<?xml version="1.0"?>
<package format="2">
  <name>nuturtle_gazebo</name>
  <version>0.0.0</version>
  <description>gazebo turtlebot3 model</description>


  <maintainer email="bostoncleek2020@u.northwestern.edu">bostoncleek</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nuturtlebot</build_depend>
  <build_depend>rigid2d</build_depend>


  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>
</package>
