<?xml version="1.0"?>
<package format="2">
  <name>rigid2d</name>
  <version>0.0.1</version>
  <description>Performs rigid 2d boy transformations</description>

  <maintainer email="bostoncleek2020@u.northwestern.edu">bostoncleek</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <test_depend>rosunit</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
